--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -1,50 +1,51 @@
 .cards-container {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-  }
-  
-  .card {
-    background: #f8f8f8;
-    border-radius: 30px;
-    overflow: hidden;
-    width: 300px;
-    min-height: 500px;
-    display: flex;
-    flex-direction: column;
-    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
-    transition: transform 0.3s ease;
-  }
-  
-  .card:hover {
-    transform: translateY(-10px);
-  }
-  
-  .card-image {
-    background-size: cover;
-    background-position: center;
-    height: 60%;
-    width: 100%;
-  }
-  
-  .card-content {
-    padding: 20px;
-    background-color: #fff;
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-  }
-  
-  .card-content h4 {
-    font-size: 16px;
-    color: #666;
-    margin-bottom: 8px;
-  }
-  
-  .card-content h2 {
-    font-size: 22px;
-    font-weight: bold;
-    color: #000;
-  }
-  
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
+
+.card {
+  border: 6px solid green;
+  border-radius: 30px;
+  /* overflow: hidden; */
+  width: 300px;
+  min-height: 400px;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease;
+}
+
+.card:hover {
+  transform: translateY(-10px);
+}
+
+.card-image {
+  background-size: contain;
+  background-position: center;
+  height: 100%;
+  width: 100%;
+  border-radius: 30px;
+  overflow: hidden;
+}
+
+.card-content {
+  padding: 20px;
+  background-color: #fff;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.card-content h4 {
+  font-size: 16px;
+  color: #666;
+  margin-bottom: 8px;
+}
+
+.card-content h2 {
+  font-size: 22px;
+  font-weight: bold;
+  color: #000;
+}
