Skill section completed

--- a/src/components/contactMe/ContactMe.css
+++ b/src/components/contactMe/ContactMe.css
@@ -2,8 +2,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 12rem 0 0rem 0;
+  margin: 12rem 0 rem 0;
   flex-direction: column;
+  padding: 10rem 0 2rem 0;
 }
 
 .contactText {
