--- a/src/components/skillsAndTools/Languages.css
+++ b/src/components/skillsAndTools/Languages.css
@@ -6,7 +6,7 @@
   display: grid;
   gap: 2rem;
   margin-top: 3rem;
-  grid-template-columns: repeat(auto-fit, minmax(90px, 1fr));
+  grid-template-columns: repeat(3, minmax(90px, 1fr));
 }
 
 .header {
