--- a/src/components/skillsAndTools/SkillsAndTools.css
+++ b/src/components/skillsAndTools/SkillsAndTools.css
@@ -11,7 +11,7 @@
 .contentContainer {
   margin: 6rem 0 0 0;
   display: flex;
-  width: 80%;
+  /* width: 80%; */
   justify-content: center;
   align-items: flex-start;
 }
@@ -21,7 +21,7 @@
   border-radius: 12px;
   background: linear-gradient(90deg, #ff6ec4, #7873f5);
   margin: 0 22px;
-  width: 30%;
+  /* width: 30%; */
 }
 
 .content {
