--- a/src/components/Experience/Experience.css
+++ b/src/components/Experience/Experience.css
@@ -3,6 +3,12 @@
 }
 .card-container {
   display: flex;
+  align-items: center;
+  justify-content: center;
   flex-direction: row;
-  margin: 20px;
+  margin: 6rem 0 0 0;
+}
+
+.skillsHeading {
+  font-size: 40px;
 }
