--- a/src/components/Experience/ExperienceCard.css
+++ b/src/components/Experience/ExperienceCard.css
@@ -4,15 +4,15 @@
   padding: 16px;
   max-width: 600px;
   font-family: sans-serif;
-  /* background-color: #fff; */
   margin: 24px;
 }
 
 .experience-header {
   display: flex;
   align-items: center;
-  gap: 12px;
-  margin-bottom: 16px;
+  gap: 22px;
+  margin-bottom: 36px;
+  margin-top: 12px;
 }
 
 .company-logo {
@@ -21,14 +21,20 @@
   border-radius: 50%;
 }
 
+.company-container {
+}
+
 .company-name {
   font-size: 18px;
   font-weight: 600;
+  margin: 0;
+  padding-bottom: 4px;
 }
 
 .employment-type {
   font-size: 14px;
-  color: #666;
+  color: #f8f5f5;
+  margin: auto;
 }
 
 .role-entry {
@@ -36,18 +42,18 @@
   position: relative;
   margin-left: 16px;
   padding-left: 12px;
-  border-left: 2px solid #ccc;
-  margin-bottom: 20px;
+  /* border-left: 2px solid #f1ebeb; */
+  margin-top: 20px;
 }
 
 .role-timeline {
   width: 10px;
   height: 10px;
-  background-color: #bbb;
+  background-color: #f3f0f0;
   border-radius: 50%;
   position: absolute;
   left: -6px;
-  /* top: 6px; */
+  top: 3px;
 }
 
 .role-details {
@@ -56,17 +62,18 @@
 
 .role-title {
   font-size: 16px;
-  font-weight: 500;
-  margin-bottom: 4px;
+  font-weight: 600;
+  margin: 0;
 }
 
 .duration-location {
   font-size: 14px;
-  color: #444;
-  margin-bottom: 4px;
+  color: #f7f2f2;
+  line-height: 20px;
+  margin-top: 4px;
 }
 
 .skills {
   font-size: 14px;
-  color: #000;
+  color: #fdf6f6;
 }
