--- a/src/components/Experience/ExperienceCard.css
+++ b/src/components/Experience/ExperienceCard.css
@@ -5,6 +5,7 @@
   max-width: 600px;
   font-family: sans-serif;
   margin: 24px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 .experience-header {
@@ -42,7 +43,6 @@
   position: relative;
   margin-left: 16px;
   padding-left: 12px;
-  /* border-left: 2px solid #f1ebeb; */
   margin-top: 20px;
 }
 
