--- a/src/components/TopBar/TopBar.css
+++ b/src/components/TopBar/TopBar.css
@@ -94,7 +94,7 @@
 }
 
 /* For mobile phones */
-@media (max-width: 480px) {
+/* @media (max-width: 480px) {
   .TopBar {
     padding: 0.5rem;
   }
@@ -111,4 +111,4 @@
   .topSectionText {
     font-size: 0.85rem;
   }
-}
+} */
