--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -9,6 +9,7 @@
   border-radius: 30px;
   /* overflow: hidden; */
   width: 300px;
+  min-width: 160px;
   min-height: 400px;
   display: flex;
   flex-direction: column;
@@ -21,7 +22,7 @@
 }
 
 .card-image {
-  background-size: contain;
+  background-size: cover;
   background-position: center;
   height: 100%;
   width: 100%;
